<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_register_pro"
    tools:context="com.example.renhao.wevolunteer.activity.RegisterProBonoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_homepage_height"
        android:background="@color/colorCyan">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="150px"
            android:layout_height="match_parent"
            android:background="@drawable/linearlayout_back"
            android:onClick="back">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/imageview_homepage_magnifierSize"
                android:layout_height="@dimen/imageview_homepage_magnifierSize"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/actionbar_homepage_margin"
                android:layout_marginStart="@dimen/actionbar_homepage_margin"
                android:padding="@dimen/imageview_backBTN_padding"
                android:src="@drawable/icon_indicator" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/title_register_pro_bono"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textview_homepage_titlesize" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_register_nickname"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="69px"
                    android:layout_marginStart="69px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_nickname"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_register_name"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_trueName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="69px"
                    android:layout_marginStart="69px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_name"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_credentials_type"
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/linearlayout_select"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_id_number_type"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_credentials_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:hint="==请选择=="
                    android:layout_weight="1"
                    android:textSize="45px" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/imageview_bottom_mark_marginright"
                    android:src="@drawable/icon_right_indicator" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_id_number"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_id_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_id_number"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_Email"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_Email"
                    android:inputType="textEmailAddress"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_register_password"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_password"
                    android:inputType="textPassword"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_register_Repassword"
                    android:textSize="48px"
                    android:textStyle="bold"
                    android:id="@+id/textView10" />

                <EditText
                    android:id="@+id/et_register_Repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_Repassword"
                    android:inputType="textPassword"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_personal_attribute"
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/linearlayout_select"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_personal_attribute"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_register_pro_bono_attribute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="45px"
                    android:layout_weight="1"
                    android:textSize="48px" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/imageview_bottom_mark_marginright"
                    android:src="@drawable/icon_right_indicator" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#d9d9d9" />

            <include layout="@layout/include_pro_bono" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_mobile_phone"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:layout_marginStart="15px"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_mobile_phone"
                    android:inputType="phone"
                    android:textSize="45px" />

                <Button
                    android:id="@+id/btn_register_verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30px"
                    android:layout_marginEnd="45px"
                    android:layout_marginRight="45px"
                    android:background="@drawable/verify_common_btn"
                    android:text="@string/btn_verification_code"
                    android:textColor="@color/colorCyan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="45px"
                    android:text="@string/tv_register_verification_code"
                    android:textSize="48px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40px"
                    android:layout_marginStart="40px"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_verification_code"
                    android:textSize="45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30px"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_register_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_agree"
                    android:textColor="@color/colorCyan"
                    android:textSize="42px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_clause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="《宁波市注册志愿者管理办法》"
                    android:textSize="42px"
                    android:textColor="@color/colorDarkBlue"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register_volunteer"
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:layout_margin="45px"
                android:background="@drawable/bg_btn_selected"
                android:text="@string/btn_register"
                android:textColor="@color/colorWhite"
                android:textSize="54px" />

            <Button
                android:id="@+id/btn_back_login"
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:layout_marginBottom="30px"
                android:layout_marginLeft="45px"
                android:layout_marginRight="45px"
                android:background="@drawable/bg_btn_two_selected"
                android:text="@string/btn_existing_login"
                android:textColor="@color/colorCyan"
                android:textSize="54px" />
        </LinearLayout>

    </ScrollView>

</com.zhy.autolayout.AutoLinearLayout>
