<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkWhite"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_homepage_height"
        android:background="@color/colorCyan">

        <ImageView
            android:id="@+id/imageView_btn_back"
            android:layout_width="@dimen/imageview_homepage_magnifierSize"
            android:layout_height="@dimen/imageview_homepage_magnifierSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/actionbar_homepage_margin"
            android:layout_marginStart="@dimen/actionbar_homepage_margin"
            android:padding="@dimen/imageview_backBTN_padding"
            android:src="@drawable/icon_indicator" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/title_complete_information"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textview_homepage_titlesize" />

        <TextView
            android:id="@+id/tv_complete_information_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/textview_homepage_titlesize"
            android:layout_marginRight="@dimen/textview_homepage_titlesize"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/tv_submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textview_submit_titlesize" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LL_complete_trueName"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_register_name"
            android:textSize="48px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_complete_trueName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="69px"
            android:layout_marginStart="69px"
            android:background="@color/colorWhite"
            android:hint="@string/hint_register_name"
            android:textSize="45px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_credentials_type"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/linearlayout_select"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_id_number_type"
            android:textSize="48px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_credentials_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:layout_marginStart="21px"
            android:layout_weight="0.9"
            android:hint="==请选择=="
            android:textSize="45px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/icon_right_indicator" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LL_complete_IdNumber"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_id_number"
            android:textSize="48px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_complete_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:layout_marginStart="24px"
            android:background="@color/colorWhite"
            android:hint="@string/hint_id_number"
            android:textSize="45px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_complete_ORG"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/linearlayout_select"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_organization"
            android:textSize="48px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_complete_ORG"
            android:layout_width="690px"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="45px"
            android:textSize="48px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/icon_right_indicator" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_complete_Email"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_Email"
            android:textSize="48px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_complete_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:layout_marginStart="24px"
            android:background="@color/colorWhite"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress"
            android:textSize="45px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_complete_phone"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="45px"
            android:text="@string/tv_mobile_phone"
            android:textSize="48px"

            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_complete_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:layout_marginStart="24px"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:hint="@string/hint_mobile_phone"
            android:inputType="phone"
            android:textSize="45px" />

    </LinearLayout>


</com.zhy.autolayout.AutoLinearLayout>