<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="510px"
            android:scaleType="centerCrop"
            android:src="@drawable/login_head" />

       <!-- <ImageView
            android:id="@+id/imageView_btn_back"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_indicator" />-->
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_marginTop="45px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="135px"
            android:layout_height="135px"
            android:layout_gravity="center"
            android:layout_marginLeft="45px"
            android:layout_marginStart="45px"
            android:padding="30px"
            android:src="@drawable/user_name" />

        <EditText
            android:id="@+id/edit_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="45px"
            android:layout_marginStart="45px"
            android:background="@color/colorWhite"
            android:hint="@string/hint_login_username"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="135px"
            android:layout_height="135px"
            android:layout_gravity="center"
            android:layout_marginLeft="45px"
            android:layout_marginStart="45px"
            android:padding="30px"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="45px"
            android:layout_marginStart="45px"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/img_HiddenOrShow"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:src="@drawable/hide" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="45px"
        android:layout_marginEnd="45px"
        android:layout_marginRight="45px"
        android:layout_marginTop="30px"
        android:text="@string/tv_login_forgot_password"
        android:textSize="42px"
        android:textColor="@color/colorCyan" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_margin="45px"
        android:background="@drawable/bg_btn_selected"
        android:text="@string/btn_login"
        android:textColor="@color/colorWhite"
        android:textSize="54px" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_marginLeft="45px"
        android:layout_marginRight="45px"
        android:background="@drawable/bg_btn_two_selected"
        android:text="@string/btn_register"
        android:textColor="@color/colorCyan"
        android:textSize="54px" />


</com.zhy.autolayout.AutoLinearLayout>
